--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "bootstrap": "^3.3.7"
   },
   "devDependencies": {
+    "babel-plugin-transform-react-jsx": "^6.23.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
     "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
@@ -19,6 +23,7 @@
     "grunt-eslint": "^19.0.0",
     "grunt-file-hash": "^0.1.6",
     "grunt-hashres": "^0.4.1",
+    "grunt-jsx": "^0.1.8",
     "livereload": "^0.6.2"
   }
 }
