--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lab3",
   "version": "1.0.0",
   "scripts": {
-    "start": "grunt && grunt serve"
+    "start": "cspell \"site/**/*\" && grunt && grunt serve"
   },
   "dependencies": {
     "bootstrap": "^3.3.7"
@@ -11,6 +11,7 @@
     "babel-plugin-transform-react-jsx": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "cspell": "^1.5.0",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
     "grunt-contrib-clean": "^1.0.0",
@@ -18,12 +19,14 @@
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.0.0",
-    "grunt-contrib-uglify": "^2.2.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-eslint": "^19.0.0",
-    "grunt-file-hash": "^0.1.6",
     "grunt-hashres": "^0.4.1",
     "grunt-jsx": "^0.1.8",
-    "livereload": "^0.6.2"
+    "grunt-ts": "^6.0.0-beta.15",
+    "grunt-tslint": "^4.0.1",
+    "livereload": "^0.6.2",
+    "systemjs": "^0.19.47",
+    "tslint": "^4.5.1",
+    "typescript": "^2.2.2"
   }
 }
